--- a/src/index.njk
+++ b/src/index.njk
@@ -1,5 +1,10 @@
 ---
 layout: layouts/base.njk
-title: Title Strings
+title: "Mi hermoso portafolio"
+eleventyNavigation:
+    key: index
+    title: Home
+    order: 2
 ---
 <h1>This is global data: {{siteData.name}}</h1>
+<p>Esto es {{siteData.dominio}}, creado por {{siteData.autor}}</p>
