--- a/src/index.njk
+++ b/src/index.njk
@@ -1,10 +1,111 @@
 ---
 layout: layouts/base.njk
-title: "Mi hermoso portafolio"
+title: "La Croqueterie"
 eleventyNavigation:
-    key: index
-    title: Home
-    order: 2
+    key: carta
+    title: LA CROQUETERIE
+    order: 5
+imagenCabecera: ../images/home/home-banner.jpg
+tituloCabecera: LA CROQUETERIE
 ---
-<h1>This is global data: {{siteData.name}}</h1>
-<p>Esto es {{siteData.dominio}}, creado por {{siteData.autor}}</p>
+
+<div class="caja-intro"> 
+   
+    <div class="hero">Lo más parecido a las croquetas de tu abuela</div>
+</div>
+
+<div class="home-caja-dos"> 
+    <div class="texto">
+        <p> 
+            La croqueterie empezó como un pequeño proyecto familiar, una idea, una locura, que acabó desencadenando <br>
+            en este negocio familiar y acogedor. Y es que, enel mundo globalizado en el que vivimos, cuesta >br>
+            encontrar negocios pequeños que te ofrezcan calidad. 
+        </p>
+        <p> 
+            ¿Qué mejor que las croquetas de <br>
+            "amama"?
+        </p> 
+    </div>
+</div>
+
+<div class="galeria"> 
+   <div class="imagen">
+        <img src="../images/home/home-1.jpg">
+   </div>
+   <div class="imagen">
+        <img src="../images/home/home-2.jpg">
+   </div>
+   <div class="imagen">
+        <img src="../images/home/home-3.jpg">
+   </div>
+   
+</div>
+
+<div class="home-caja-cuatro"> 
+    <div class="texto">
+        <p> 
+            En la Croqueterie nor preocupamos de buscar los productos más frescos y de cercanía, dando calidad a nuestras <br>
+            croquetas, y apoyando a los pequeños emprendedores y agricultores locales. 
+        </p>
+        <p> 
+            Aquí podrás encontrar una de las más vastas variedades de croquetas, desde las famosas croquetas de jamón a croquetas de <br>
+            queso azul, entre otras. Te recomendamos nuetsras especialidades. Encontrarás también opciones vegetarianas y veganas.
+        </p> 
+        <p> 
+           Ven a disfrutar de las croquetas más famosas de la ciudad. ¡Aquí te esperamos!
+        </p> 
+    </div>
+</div>
+
+<div class="galeria"> 
+      <div class="imagen">
+        <img src="../images/home/home-4.jpg">
+   </div>
+   <div class="imagen">
+        <img src="../images/home/home-5.jpg">
+   </div>
+   <div class="imagen">
+        <img src="../images/home/home-6.jpg">
+   </div>
+</div>
+
+				
+
+
+<div class="comentarios"> 
+   <h1>Comentarios</h1>
+   <div class="comentarios-galeria">
+       <!--
+        <div class="comentario-caja">
+            <p class="comentario-body">
+
+            </p>
+            <p class="nombre">
+                Maria Biarge
+            </p>
+        </div>
+
+        <div class="comentario-caja">
+            <p class="comentario-body">
+                En Bilbao se come de maravilla, y este es desde luego uno de mis lugares favoritos. Con 
+                un servicio inmejorable, en la Croqueterie he probado as mejores croquetas de mi vida. 
+                Muy contento.
+            </p>
+            <p class="nombre">
+                Josep Ortega
+            </p>
+        </div>
+
+        <div class="comentario-caja">
+            <p class="comentario-body">
+            
+            </p>
+            <p class="nombre">
+                Maria Biarge
+            </p>
+        </div>
+        -->
+   </div>
+   
+</div>
+
