--- a/src/styles/_nav.scss
+++ b/src/styles/_nav.scss
@@ -1,16 +1,21 @@
 .nav {
     margin-top: 50px;
     margin-bottom: 50px;
-}
+    text-align: left;
+    justify-content: left;
+    
 
-.nav a {
+
+    a {
     text-decoration: none;
-    color: black;
-    font-family: sans-serif;
+    color: white;
+    font-family: var(--tipo);
     text-transform: uppercase;
     margin-right: 1rem;
-}
+    }
 
-.nav a.activo {
+    a.activo {
     border-bottom: 2px solid;
+    }
+
 }
