--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,8 +1,24 @@
 @import '_reset.scss';
 @import '_nav.scss';
+@import 'variables.css';
+@import 'tipografia.css';
+@import '_footer.scss';
+@import '_home.scss';
+@import '_carta.scss';
+@import '_localizacion.scss';
+@import '_historia.scss';
+
+
+
 
 $var: white;
 
 body {
-  background-color: $var;
+  background-color: var(--fondo);
+  color: var(--color-tipo);
+}
+
+.cabecera {
+  min-height: 700px;
+  width: 100%;
 }
