--- a/src/index.njk
+++ b/src/index.njk
@@ -38,6 +38,15 @@ tituloCabecera: LA CROQUETERIE
    <div class="imagen">
         <img src="../images/home/home-3.jpg">
    </div>
+   <div class="imagen">
+        <img src="../images/home/home-4.jpg">
+   </div>
+   <div class="imagen">
+        <img src="../images/home/home-5.jpg">
+   </div>
+   <div class="imagen">
+        <img src="../images/home/home-6.jpg">
+   </div>
    
 </div>
 
@@ -58,7 +67,7 @@ tituloCabecera: LA CROQUETERIE
 </div>
 
 <div class="galeria"> 
-      <div class="imagen">
+    <div class="imagen">
         <img src="../images/home/home-4.jpg">
    </div>
    <div class="imagen">
@@ -66,6 +75,15 @@ tituloCabecera: LA CROQUETERIE
    </div>
    <div class="imagen">
         <img src="../images/home/home-6.jpg">
+         <div class="imagen">
+        <img src="../images/home/home-1.jpg">
+   </div>
+   <div class="imagen">
+        <img src="../images/home/home-2.jpg">
+   </div>
+   <div class="imagen">
+        <img src="../images/home/home-3.jpg">
+   </div>
    </div>
 </div>
 
