--- a/src/_includes/layouts/footer.njk
+++ b/src/_includes/layouts/footer.njk
@@ -44,6 +44,7 @@
       centerMode: true,
       centerPadding: '60px',
       slidesToShow: 3,
+      adaptiveHeight: true,
       responsive: [
           {
           breakpoint: 768,
