--- a/src/_includes/layouts/footer.njk
+++ b/src/_includes/layouts/footer.njk
@@ -41,8 +41,6 @@
 
   <script type="text/javascript">
       $('.galeria').slick({
-      centerMode: true,
-      centerPadding: '60px',
       slidesToShow: 3,
       adaptiveHeight: true,
       responsive: [
@@ -50,8 +48,6 @@
           breakpoint: 768,
           settings: {
               arrows: false,
-              centerMode: true,
-              centerPadding: '40px',
               slidesToShow: 3
           }
           },
@@ -59,8 +55,6 @@
           breakpoint: 480,
           settings: {
               arrows: false,
-              centerMode: true,
-              centerPadding: '40px',
               slidesToShow: 1
           }
           }
@@ -68,6 +62,31 @@
       });
 
   </script>
+
+   <script type="text/javascript">
+      $('.comentarios-galeria').slick({
+      slidesToShow: 3,
+      adaptiveHeight: true,
+      responsive: [
+          {
+          breakpoint: 768,
+          settings: {
+              arrows: false,
+              slidesToShow: 3
+          }
+          },
+          {
+          breakpoint: 480,
+          settings: {
+              arrows: false,
+              slidesToShow: 1
+          }
+          }
+      ]
+      });
+
+  </script>
+
 
 
 </body>
