--- a/src/packs.njk
+++ b/src/packs.njk
@@ -16,12 +16,53 @@ tituloCabecera: PACKS
 
 <div class="caja-dos">
     <h1>Elegir Pack</h1>
-    <div class="galeria"> 
-        <div class="galeria-imagenes"></div>
+
+<div class="galeria"> 
+   <div class="imagen">
+        <img src="../images/packs/packs-1.jpg">
+         <div class="galeria-textos">
+            <p> Pack 10 croquetas a elegir</p>
+            <p class="numero">20€</p>
+        </div>
+   </div>
+   <div class="imagen">
+        <img src="../images/packs/packs-1.jpg">
         <div class="galeria-textos">
             <p> Pack 10 croquetas a elegir</p>
             <p class="numero">20€</p>
         </div>
-    </div>  
+   </div>
+   <div class="imagen">
+        <img src="../images/packs/packs-1.jpg">
+        <div class="galeria-textos">
+            <p> Pack 10 croquetas a elegir</p>
+            <p class="numero">20€</p>
+        </div>
+   </div>
+   <div class="imagen">
+        <img src="../images/packs/packs-1.jpg">
+        <div class="galeria-textos">
+            <p> Pack 10 croquetas a elegir</p>
+            <p class="numero">20€</p>
+        </div>
+   </div>
+   <div class="imagen">
+        <img src="../images/packs/packs-1.jpg">
+        <div class="galeria-textos">
+            <p> Pack 10 croquetas a elegir</p>
+            <p class="numero">20€</p>
+        </div>
+   </div>
+   <div class="imagen">
+        <img src="../images/packs/packs-1.jpg">
+        <div class="galeria-textos">
+            <p> Pack 10 croquetas a elegir</p>
+            <p class="numero">20€</p>
+        </div>
+   </div>
+   
+</div>
+
+
 </div>
 
