--- a/src/styles/_nav.scss
+++ b/src/styles/_nav.scss
@@ -1,8 +1,8 @@
 .nav {
-    margin-top: 50px;
+    padding-top: 50px;
     margin-bottom: 50px;
-    text-align: left;
-    justify-content: left;
+    text-align: right;
+    justify-content: right;
     
 
 
