--- a/src/carta.njk
+++ b/src/carta.njk
@@ -6,24 +6,39 @@ eleventyNavigation:
     title: CARTA
     order: 1
 imagenCabecera: ../images/carta/carta-banner.jpg
-tituloCabecera: CARTA
+tituloCabecera: ../images/carta/carta-titulo.png
 ---
 
-<div class="caja-intro"> 
-    <div class="imágen-fondo">Aquí va imagen</div> <!-- la imagen igual se puede poner de fondo-->
-    <div class="texto">Aquí va texto</div> 
-</div>
-
-<div class="galeria">
+<div class="galeria-carta">
+    <div class="imagen">
+        <img src="../images/carta/carta-1.png">
+   </div>
+   <div class="imagen">
+        <img src="../images/carta/carta-2.png">
+   </div>
+   <div class="imagen">
+        <img src="../images/carta/carta-1.png">
+   </div>
+   <div class="imagen">
+        <img src="../images/carta/carta-2.png">
+   </div>
+   <div class="imagen">
+        <img src="../images/carta/carta-1.png">
+   </div>
+   <div class="imagen">
+        <img src="../images/carta/carta-2.png">
+   </div>
 
 </div>
 
 <div class="carta-caja-dos">
     <h1> Croquetas de jamón</h1>
-    <div class="estrellas"></div>
-    <p>
-    Las croquetas de jamón son unas de las croquetas más populares a día de hoy. No defraudaremos vuestro exquisito paladar con esta receta secreta de <br>
-    nuestra amama. Intamos, una vez más, ofrecerte las mejores croquetas, como las que hacia tu propia abuela. <br>
+    <div class="estrellas">
+        <img src="../images/carta/carta-rating.png">
+    </div>
+    <p class="descripcion">
+    Las croquetas de jamón son unas de las croquetas más populares a día de hoy. No defraudaremos vuestro exquisito paladar con esta receta secreta de 
+    nuestra amama. Intamos, una vez más, ofrecerte las mejores croquetas, como las que hacia tu propia abuela. 
     ¡Pruebalas y nos cuentas! 
     </p>
     <div class="ingredientes">
@@ -47,12 +62,85 @@ tituloCabecera: CARTA
             </p>
             <p>La comida mediterránea tiene entre sus máximos exponntes al jamón ibérico ademas de otros muchos productos.</p>
        </div>
-       <div class="alergenos"></div>
+       <div class="alergenos">
+            <img class="carta-alergenos" src="../images/carta/carta-alergenos.png">
+       </div>
     </div>
 
     <div class="comentarios"> 
         <h1>Comentarios</h1>
-   
+         <div class="comentarios-galeria">
+    
+        <div class="comentario-caja">
+            <p class="comentario-body">
+                Bien crema la recena de ayer. Una buena cena de picoteo. No me ha defraudado.
+            </p>
+            <p class="nombre">
+                Oliver de Lion
+            </p>
+            <img class="comentario-rating" src="../images/variedad/variedad-rating.png">
+        </div>
+
+        <div class="comentario-caja">
+            <p class="comentario-body">
+                A mi madre le encanto las croquetas que les lleve en navidades. Estaban bien padre. Mejor que los frijoles de la abuela. 
+            </p>
+            <p class="nombre">
+                Carmen Maria de las Fuentes
+            </p>
+            <img class="comentario-rating" src="../images/variedad/variedad-rating.png">
+        </div>
+
+        <div class="comentario-caja">
+            <p class="comentario-body">
+                Visita relámpago a esta gran ciudad, y recomendados por nuestro anfitrión hemos venido a cenar a esta tasca. 
+                Todo muy correcto, ambiete muy agradable y el trato inmejorable.
+                Sin duda lo recomiendo
+            </p>
+            <p class="nombre">
+                Maia Biagini
+            </p>
+            <img class="comentario-rating" src="../images/variedad/variedad-rating.png">
+        </div>
+
+        <div class="comentario-caja">
+            <p class="comentario-body">
+                Yo nunca como croquetas fuera porque no son como las de mi abuela, pero esta 
+                vez decidí hacer una excepción y no me decepciono en abosoluto. Han 
+                mejorado con creces las croquetas de mi abuela.
+            </p>
+            <p class="nombre">
+                Maria Biarge
+            </p>
+            <img class="comentario-rating" src="../images/variedad/variedad-rating.png">
+        </div>
+
+        <div class="comentario-caja">
+            <p class="comentario-body">
+                En Bilbao se come de maravilla, y este es desde luego uno de mis lugares favoritos. Con 
+                un servicio inmejorable, en la Croqueterie he probado las mejores croquetas de mi vida. 
+                Muy contento.
+            </p>
+            <p class="nombre">
+                Josep Ortega
+            </p>
+            <img class="comentario-rating" src="../images/variedad/variedad-rating.png">
+        </div>
+
+        <div class="comentario-caja">
+            <p class="comentario-body">
+                Visita relámpago a esta gran ciudad, y recomendados por nuestro anfitrión hemos venido a cenar a esta tasca. 
+                Todo muy correcto, ambiete muy agradable y el trato inmejorable.
+                Sin duda lo recomiendo
+            </p>
+            <p class="nombre">
+                Maria Biarge
+            </p>
+            <img class="comentario-rating" src="../images/variedad/variedad-rating.png">
+        </div>
+  
+  
+   </div>
     </div>
 
 </div>
