--- a/src/index.njk
+++ b/src/index.njk
@@ -1,24 +1,16 @@
 ---
-layout: layouts/base.njk
+layout: layouts/home.njk
 title: "La Croqueterie"
-eleventyNavigation:
-    key: carta
-    title: LA CROQUETERIE
-    order: 5
-imagenCabecera: ../images/home/home-banner.jpg
-tituloCabecera: LA CROQUETERIE
----
 
-<div class="caja-intro"> 
-   
-    <div class="hero">Lo más parecido a las croquetas de tu abuela</div>
-</div>
+imagenCabecera: ../images/home/home-banner.jpg
+tituloCabecera: ../images/home/home-titulo.png
+---
 
 <div class="home-caja-dos"> 
     <div class="texto">
         <p> 
-            La croqueterie empezó como un pequeño proyecto familiar, una idea, una locura, que acabó desencadenando <br>
-            en este negocio familiar y acogedor. Y es que, enel mundo globalizado en el que vivimos, cuesta >br>
+            La croqueterie empezó como un pequeño proyecto familiar, una idea, una locura, que acabó desencadenando 
+            en este negocio familiar y acogedor. Y es que, en el mundo globalizado en el que vivimos, cuesta 
             encontrar negocios pequeños que te ofrezcan calidad. 
         </p>
         <p> 
@@ -28,7 +20,7 @@ tituloCabecera: LA CROQUETERIE
     </div>
 </div>
 
-<div class="galeria"> 
+<div class="galeria-home"> 
    <div class="imagen">
         <img src="../images/home/home-1.jpg">
    </div>
@@ -53,11 +45,11 @@ tituloCabecera: LA CROQUETERIE
 <div class="home-caja-cuatro"> 
     <div class="texto">
         <p> 
-            En la Croqueterie nor preocupamos de buscar los productos más frescos y de cercanía, dando calidad a nuestras <br>
+            En la Croqueterie nor preocupamos de buscar los productos más frescos y de cercanía, dando calidad a nuestras 
             croquetas, y apoyando a los pequeños emprendedores y agricultores locales. 
         </p>
         <p> 
-            Aquí podrás encontrar una de las más vastas variedades de croquetas, desde las famosas croquetas de jamón a croquetas de <br>
+            Aquí podrás encontrar una de las más vastas variedades de croquetas, desde las famosas croquetas de jamón a croquetas de 
             queso azul, entre otras. Te recomendamos nuetsras especialidades. Encontrarás también opciones vegetarianas y veganas.
         </p> 
         <p> 
@@ -66,7 +58,7 @@ tituloCabecera: LA CROQUETERIE
     </div>
 </div>
 
-<div class="galeria"> 
+<div class="galeria-home"> 
     <div class="imagen">
         <img src="../images/home/home-4.jpg">
     </div>
@@ -97,32 +89,75 @@ tituloCabecera: LA CROQUETERIE
     
         <div class="comentario-caja">
             <p class="comentario-body">
-
+                Visita relámpago a esta gran ciudad, y recomendados por nuestro anfitrión hemos venido a cenar a esta tasca. 
+                Todo muy correcto, ambiete muy agradable y el trato inmejorable.
+                Sin duda lo recomiendo
             </p>
             <p class="nombre">
-                Maria Biarge
+                Maia Biagini
             </p>
+            <img class="comentario-rating" src="../images/variedad/variedad-rating.png">
         </div>
 
         <div class="comentario-caja">
             <p class="comentario-body">
                 En Bilbao se come de maravilla, y este es desde luego uno de mis lugares favoritos. Con 
-                un servicio inmejorable, en la Croqueterie he probado as mejores croquetas de mi vida. 
+                un servicio inmejorable, en la Croqueterie he probado las mejores croquetas de mi vida. 
                 Muy contento.
             </p>
             <p class="nombre">
                 Josep Ortega
             </p>
+            <img class="comentario-rating" src="../images/variedad/variedad-rating.png">
         </div>
 
         <div class="comentario-caja">
             <p class="comentario-body">
-            
+                Yo nunca como croquetas fuera porque no son como las de mi abuela, pero esta 
+                vez decidí hacer una excepción y no me decepciono en abosoluto. Han 
+                mejorado con creces las croquetas de mi abuela.
             </p>
             <p class="nombre">
                 Maria Biarge
             </p>
+            <img class="comentario-rating" src="../images/variedad/variedad-rating.png">
         </div>
+
+        <div class="comentario-caja">
+            <p class="comentario-body">
+                Tenía que comer en casa de mis suegros por primera vez, y se podría decir que 
+                estas croquetas salvaron mi noche. Coló perfectamente que eran caseras. 
+                Muchas gracias. Quiero estas croquetas en mi boda. 
+            </p>
+            <p class="nombre">
+                Anonimmo
+            </p>
+            <img class="comentario-rating" src="../images/variedad/variedad-rating.png">
+        </div>
+
+        <div class="comentario-caja">
+            <p class="comentario-body">
+                En Bilbao se come de maravilla, y este es desde luego uno de mis lugares favoritos. Con 
+                un servicio inmejorable, en la Croqueterie he probado las mejores croquetas de mi vida. 
+                Muy contento.
+            </p>
+            <p class="nombre">
+                Josep Ortega
+            </p>
+            <img class="comentario-rating" src="../images/variedad/variedad-rating.png">
+        </div>
+
+        <div class="comentario-caja">
+            <p class="comentario-body">
+                A mi madre le encanto las croquetas que les lleve en navidades. 
+                Estaban bien padre. Mejor que los frijoles de la abuela. 
+            </p>
+            <p class="nombre">
+                Carmen Maria de las Fuentes
+            </p>
+            <img class="comentario-rating" src="../images/variedad/variedad-rating.png">
+        </div>
+  
   
    </div>
    
