--- a/src/packs.njk
+++ b/src/packs.njk
@@ -6,62 +6,70 @@ eleventyNavigation:
     title: PACKS
     order: 2
 imagenCabecera: ../images/packs/packs-banner.jpg
-tituloCabecera: PACKS
+tituloCabecera: ../images/packs/packs-titulo.png
 ---
 
-<div class="caja-intro"> 
-    <div class="imágen-fondo">Aquí va imagen</div> <!-- la imagen igual se puede poner de fondo-->
-    <div class="texto">Aquí va texto</div> 
-</div>
 
 <div class="caja-dos">
     <h1>Elegir Pack</h1>
 
-<div class="galeria"> 
-   <div class="imagen">
-        <img src="../images/packs/packs-1.jpg">
-         <div class="galeria-textos">
-            <p> Pack 10 croquetas a elegir</p>
-            <p class="numero">20€</p>
-        </div>
-   </div>
-   <div class="imagen">
-        <img src="../images/packs/packs-1.jpg">
-        <div class="galeria-textos">
-            <p> Pack 10 croquetas a elegir</p>
-            <p class="numero">20€</p>
-        </div>
-   </div>
-   <div class="imagen">
-        <img src="../images/packs/packs-1.jpg">
-        <div class="galeria-textos">
-            <p> Pack 10 croquetas a elegir</p>
-            <p class="numero">20€</p>
-        </div>
-   </div>
-   <div class="imagen">
-        <img src="../images/packs/packs-1.jpg">
-        <div class="galeria-textos">
-            <p> Pack 10 croquetas a elegir</p>
-            <p class="numero">20€</p>
-        </div>
-   </div>
-   <div class="imagen">
-        <img src="../images/packs/packs-1.jpg">
-        <div class="galeria-textos">
-            <p> Pack 10 croquetas a elegir</p>
-            <p class="numero">20€</p>
-        </div>
-   </div>
-   <div class="imagen">
-        <img src="../images/packs/packs-1.jpg">
-        <div class="galeria-textos">
-            <p> Pack 10 croquetas a elegir</p>
-            <p class="numero">20€</p>
-        </div>
-   </div>
-   
-</div>
+    <div class="galeria-packs"> 
+    <div class="imagen">
+            <a href="/variedad/">
+                <img src="../images/packs/packs-1.jpg">
+            </a>    
+            <div class="galeria-textos">
+                <p> Pack 10 croquetas a elegir</p>
+                <p class="numero">20€</p>
+            </div>
+    </div>
+    <div class="imagen">
+            <a href="/variedad/">
+                <img src="../images/packs/packs-1.jpg">
+            </a>
+            <div class="galeria-textos">
+                <p> Pack 10 croquetas a elegir</p>
+                <p class="numero">20€</p>
+            </div>
+    </div>
+    <div class="imagen">
+            <a href="/variedad/">
+                <img src="../images/packs/packs-1.jpg">
+            </a>
+            <div class="galeria-textos">
+                <p> Pack 10 croquetas a elegir</p>
+                <p class="numero">20€</p>
+            </div>
+    </div>
+    <div class="imagen">
+            <a href="/variedad/">
+                <img src="../images/packs/packs-1.jpg">
+            </a>
+            <div class="galeria-textos">
+                <p> Pack 10 croquetas a elegir</p>
+                <p class="numero">20€</p>
+            </div>
+    </div>
+    <div class="imagen">
+            <a href="/variedad/">
+                <img src="../images/packs/packs-1.jpg">
+            </a>
+            <div class="galeria-textos">
+                <p> Pack 10 croquetas a elegir</p>
+                <p class="numero">20€</p>
+            </div>
+    </div>
+    <div class="imagen">
+            <a href="/variedad/">
+                <img src="../images/packs/packs-1.jpg">
+            </a>
+            <div class="galeria-textos">
+                <p> Pack 10 croquetas a elegir</p>
+                <p class="numero">20€</p>
+            </div>
+    </div>
+    
+    </div>
 
 
 </div>
