--- a/src/styles/_slick.scss
+++ b/src/styles/_slick.scss
@@ -1,46 +1,150 @@
-
-.slick-current + .slick-active {
-    transform: scale(2);
-  }
-  
-  .slick-list {
-    padding-top: 50px !important;
-    padding-bottom: 50px !important;
-   
-  
-  }
-  
-  .slick-slide {
-    transition: all.3s;
-  
-  }
-
- 
- .comentarios-galeria {
-    .slick-current + .slick-active {
-        transform: scale(1.2);
-      }
- } 
-
-
-
-.slick-next {
-    right: 0px !important;
-    background-color: transparent !important;
-    width: 100px !important;
-    height: 250px !important;
-
-    :before {
-        display: none !important;
-    }
-
-    ::after {
-        display: none !important;
-    }
+.slick-slide {
+  transition: all.3s;
 
 }
 
+
+/*ARROWS*/
+.slick-prev::before {
+  display: none !important;
+}
+
+.slick-next::before {
+  display: none !important;
+}
+
+.slick-next {
+    right: 30px !important;
+}
+
+
 .slick-prev {
     left: 30px !important;
-    position: absolute !important;
+    z-index: 1;
+}
+
+.slick-next, .slick-prev {
+  top: 0 !important;
+  background-color: transparent;
+  width: 100px !important;
+  height: 100% !important;
+  transform: none !important;
+}
+
+.slick-list {
+  padding-top: 100px !important;
+  padding-bottom: 100px !important;
+}
+
+
+/*HOME*/
+.galeria-home {
+
+  .slick-current + .slick-active {
+      transform: scale(2);
+  }
+}
+
+
+/*CARTA*/
+.galeria-carta {
+
+  .slick-current + .slick-active {
+    transform: scale(2);
+  } 
+
+  .slick-list {
+    padding-top: 200px !important;
+    padding-bottom: 150px !important;
+  }
+}  
+
+
+/*PACKS*/
+.galeria-packs {
+
+  .slick-current + .slick-active {
+    transform: scale(1.5);
+  }
+
+}  
+
+
+/*HISTORIA*/
+.galeria-historia {
+
+  .slick-current + .slick-active {
+    transform: scale(1.5);
+  }
+
+  .slick-list {
+    padding-top: 200px !important;
+    padding-bottom: 100px !important;
+  }
+
+}  
+
+
+/*COMENTARIOS*/
+.comentarios-galeria {
+  .slick-current + .slick-active {
+      transform: scale(1.2);
+    }
+
+    .slick-list {
+      padding-top: 50px !important;
+      padding-bottom: 150px !important;
+    }
+} 
+
+@media (min-width: 601px) and (max-width: 800px){
+  .galeria-carta {  
+    .slick-list {
+      padding-top: 150px !important;
+      padding-bottom: 75px !important;
+    }
+  }  
+
+  .galeria-packs {
+    .slick-list {
+      padding-top: 90px !important;
+      padding-bottom: 70px !important;
+    }
+  }
+
+  .galeria-historia {
+    .slick-list {
+      padding-top: 150px !important;
+      padding-bottom: 75px !important;
+    }
+  }  
+
+}
+
+@media (max-width: 600px) {
+  .slick-list {
+    padding-top: 0;
+    padding-bottom: 0;
+  }
+
+  .galeria-carta {  
+    .slick-list {
+      padding-top: 100px !important;
+      padding-bottom: 50px !important;
+    }
+  }  
+  .galeria-packs {
+    .slick-list {
+      padding-top: 80px !important;
+      padding-bottom: 80px !important;
+    }
+  }
+
+  .galeria-historia {
+    .slick-list {
+      padding-top: 100px !important;
+      padding-bottom: 50px !important;
+    }
+  } 
+
 }
