--- a/src/_includes/layouts/footer.njk
+++ b/src/_includes/layouts/footer.njk
@@ -15,13 +15,13 @@
 
       <div class="footer-social">
         <a>
-          <img class="social" src="">
+          <img class="social" src="../images/footer/instagram.png">
         </a>
         <a>
-          <img class="social" src="">
+          <img class="social" src="../images/footer/facebook.png">
         </a>
         <a>
-          <img class="social" src="">
+          <img class="social" src="../images/footer/twitter.png">
         </a>
       </div>
 
@@ -36,11 +36,60 @@
   <script src="/scripts/index.js"></script>
   <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
   <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-  <script type="text/javascript" src="slick/slick.min.js"></script>
+  <script type="text/javascript" src="/slick/slick.min.js"></script>
 
 
   <script type="text/javascript">
-      $('.galeria').slick({
+      $('.galeria-home').slick({
+      slidesToShow: 3,
+      adaptiveHeight: true,
+      responsive: [
+          {
+          breakpoint: 768,
+          settings: {
+              arrows: true,
+              slidesToShow: 3
+          }
+          },
+          {
+          breakpoint: 480,
+          settings: {
+              arrows: true,
+              slidesToShow: 1
+          }
+          }
+      ]
+      });
+
+  </script>
+
+   <script type="text/javascript">
+      $('.comentarios-galeria').slick({
+      slidesToShow: 3,
+      adaptiveHeight: true,
+      responsive: [
+          {
+          breakpoint: 801,
+          settings: {
+              arrows: false,
+              slidesToShow: 3
+          }
+          },
+          {
+          breakpoint: 800,
+          settings: {
+              arrows: true,
+              slidesToShow: 1
+          }
+          }
+      ]
+      });
+
+  </script>
+
+
+  <script type="text/javascript">
+      $('.galeria-packs').slick({
       slidesToShow: 3,
       adaptiveHeight: true,
       responsive: [
@@ -54,7 +103,7 @@
           {
           breakpoint: 480,
           settings: {
-              arrows: false,
+              arrows: true,
               slidesToShow: 1
           }
           }
@@ -63,8 +112,32 @@
 
   </script>
 
-   <script type="text/javascript">
-      $('.comentarios-galeria').slick({
+  <script type="text/javascript">
+      $('.galeria-historia').slick({
+      slidesToShow: 3,
+      adaptiveHeight: true,
+      responsive: [
+          {
+          breakpoint: 768,
+          settings: {
+              arrows: false,
+              slidesToShow: 3
+          }
+          },
+          {
+          breakpoint: 480,
+          settings: {
+              arrows: true,
+              slidesToShow: 1
+          }
+          }
+      ]
+      });
+
+  </script>
+
+  <script type="text/javascript">
+      $('.galeria-carta').slick({
       slidesToShow: 3,
       adaptiveHeight: true,
       responsive: [
