--- a/src/_includes/layouts/header.njk
+++ b/src/_includes/layouts/header.njk
@@ -9,7 +9,7 @@
   <meta name="description" content="{{ renderData.description or description or metadata.description }}">
   <title>{{ renderData.title or title or metadata.title }}</title>
   <link rel="stylesheet" href="/styles/index.css">
-  <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
-  <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
+  <link rel="stylesheet" type="text/css" href="/slick/slick.css"/>
+  <link rel="stylesheet" type="text/css" href="/slick/slick-theme.css"/>
 </head>
 <body id="top" itemscope itemtype="http://schema.org/WebPage">
