--- a/src/historia.njk
+++ b/src/historia.njk
@@ -6,24 +6,19 @@ eleventyNavigation:
     title: HISTORIA
     order: 3
 imagenCabecera: ../images/historia/historia-banner.jpg
-tituloCabecera: HISTORIA
+tituloCabecera: ../images/historia/historia-titulo.png
 ---
-
-<div class="caja-intro"> 
-    <div class="imágen-fondo">Aquí va imagen</div> <!-- la imagen igual se puede poner de fondo-->
-    <div class="texto">Aquí va texto</div> 
-</div>
 
 <div class="caja-dos"> 
     <div class="texto">
         <p> 
-           Todo empezó en alguna comida familiar, tal vez en navidades o tal vez en verano, o un domingo cualquiera o la <br>
-           celebración de algun cumpleaños. Poco importa el momento del año. Fue el escenario perfecto, tras alguna copita de más <br>
-           y muchas risas y enfados, que nadie recuerda como pero las croquetas se convirtieron en tema de conversación. Y es que la <br>
-           familia Martinez tenemos una pequeña adicción a los fritos, en gran parte por culpa de la abuela y estas maravillosas <br>
-           comidas familiares. Fue en ese momento, en el que con la euforia, las risas y el vino, Ibar, la hermana mayor, alzó la voz y <br>
-           propuso abrir un bar de croquetas. Todos comenzamos a reir. Sentiamos que era una locura, una tonteria, pero a su vez <br>
-           empezó a nacer una ilusión dentro de nosotros. ¿Y si abriesemos una croqueteria? Y si, y si… En ese momento <br>
+           Todo empezó en alguna comida familiar, tal vez en navidades o tal vez en verano, o un domingo cualquiera o la 
+           celebración de algun cumpleaños. Poco importa el momento del año. Fue el escenario perfecto, tras alguna copita de más 
+           y muchas risas y enfados, que nadie recuerda como pero las croquetas se convirtieron en tema de conversación. Y es que la
+           familia Martinez tenemos una pequeña adicción a los fritos, en gran parte por culpa de la abuela y estas maravillosas 
+           comidas familiares. Fue en ese momento, en el que con la euforia, las risas y el vino, Ibar, la hermana mayor, alzó la voz y 
+           propuso abrir un bar de croquetas. Todos comenzamos a reir. Sentiamos que era una locura, una tonteria, pero a su vez
+           empezó a nacer una ilusión dentro de nosotros. ¿Y si abriesemos una croqueteria? Y si, y si… En ese momento 
            empezamos a asignar los roles: “Yo seré cocinera” dijó una, “yo camarero” dijo otro, seguido de risas. 
 
         </p>
@@ -32,19 +27,38 @@ tituloCabecera: HISTORIA
         </p> 
     </div>
 
-    <div class="galeria"> 
-        <div class="galeria-imagenes"></div>
-         <div class="galeria-texto">
-            <h1>Ibar Martinez</h1>
-            <h2>Fundadora</h2>
-            <p>
-                Ibar, la hermana mayor de la familia Martinez Echebarria, es la fundadera de <strong>La Croqueterie</strong>. Estudio informatica en la <br>
-                universidad de Deusto, y trás 20 años dedicandose a ello, decidió abrir La Croqueterie. Desde entonces, es la encargada<br> 
-                del local. Todo esto, es posible gracias a ella. 
-            <p>
-         </div>
-        
+    <div class="galeria-historia"> 
+        <div class="imagen">
+           <img src="../images/historia/historia-1.png">
+        </div>
+         <div class="imagen">
+            <img src="../images/historia/historia-2.png">
+        </div>
+         <div class="imagen">
+            <img src="../images/historia/historia-3.png">
+        </div>
+         <div class="imagen">
+            <img src="../images/historia/historia-1.png">
+        </div>
+         <div class="imagen">
+            <img src="../images/historia/historia-2.png">
+        </div>
+         <div class="imagen">
+            <img src="../images/historia/historia-3.png">
+        </div>
     </div>
+
+    <div class="galeria-texto">
+        <h1>Ibar Martinez</h1>
+        <h2>Fundadora</h2>
+        <p>
+            Ibar, la hermana mayor de la familia Martinez Echebarria, es la fundadera de <strong>La Croqueterie</strong>. Estudio informatica en la 
+            universidad de Deusto, y trás 20 años dedicandose a ello, decidió abrir La Croqueterie. Desde entonces, es la encargada
+            del local. Todo esto, es posible gracias a ella. 
+        <p>
+    </div>
+        
+    
 
     
 </div>
