--- a/src/localización.njk
+++ b/src/localización.njk
@@ -6,13 +6,8 @@ eleventyNavigation:
     title: LOCALIZACIÓN
     order: 4
 imagenCabecera: ../images/localizacion/localizacion-banner.jpg
-tituloCabecera: LOCALIZACIÓN
+tituloCabecera: ../images/localizacion/localizacion-titulo.png
 ---
-
-<div class="caja-intro"> 
-    <div class="imágen-fondo">Aquí va imagen</div> <!-- la imagen igual se puede poner de fondo-->
-    <div class="texto">Aquí va texto</div> 
-</div>
 
 <div class="mapa"></div>
 <div class="localizacion-texto">
