--- a/src/styles/_historia.scss
+++ b/src/styles/_historia.scss
@@ -1,3 +1,15 @@
+.galeria-historia {
+    margin-left: auto;
+    margin-right: auto;
+
+    .imagen {
+        display: inline-block;
+        margin-left: 20px;
+        margin-right: 20px;
+        max-height: 100%;  
+    }
+}
+
 .caja-dos {
     margin-top: 80px;
     margin-bottom: 80px;
@@ -9,4 +21,27 @@
     margin-top: 80px;
     margin-bottom: 80px;
     text-align: center;
+
+    p {
+        padding-left: 120px;
+        padding-right: 120px; 
+    }
+}
+
+@media (min-width: 850px) and (max-width: 970px){
+    .galeria-texto {
+        p {
+            padding-right: 60px;
+            padding-left: 60px;
+        }
+    }
+}    
+
+@media (max-width: 849px){
+    .galeria-texto {
+        p {
+            padding-right: 40px;
+            padding-left: 40px;
+        }
+    }
 }
